--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 seus clientes, criando projetos personalizados, unindo a tradição<br />
                 e a modernidade em nossos projetos.</p>
         </div>
-        <img src="Imagens\empresa.svg" id="imgempresa" alt="arquitetura de uma casa"/>
+        <img src="empresa.svg" id="imgempresa" alt="arquitetura de uma casa"/>
     </div>
     <!--Formulário-->
     <div id="formulario">
